# Mach3SurfacingGenerator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
assets/: windows.rc.in
certificates/: Mach3SurfacingGenerator-Local.cer
packaging/linux/: Mach3SurfacingGenerator.desktop.in  io.github.nicolastruffier.Mach3SurfacingGenerator.metainfo.xml.in
presets/: presets.json
resources/: resources.qrc
scripts/: Build-WindowsRelease.ps1  Create-LocalSigningCertificate.ps1  Generate-Checksums.ps1  Install-LocalCertificate.ps1  Sign-Release.ps1  build-linux-release.sh  verify-linux-release.sh
src/: GCodeGenerator.cpp  GCodeGenerator.h  Mach3PostProcessor.cpp  Mach3PostProcessor.h  MainWindow.cpp  MainWindow.h  MaterialPreset.h  PresetManager.cpp  PresetManager.h  PreviewWidget.cpp  PreviewWidget.h  SurfacingJob.h  ToolPreset.h  main.cpp
tests/: GCodeGeneratorTests.cpp
